--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
+        "laravel/helpers": "^1.2",
         "laravel/tinker": "^2.0",
+        "matrix-lab/laravel-advanced-search": "^0.2.6",
         "mll-lab/laravel-graphql-playground": " ^2.0",
         "nuwave/lighthouse": " ^4.6",
         "tymon/jwt-auth": "^1.0.0"
@@ -19,6 +21,7 @@
     "require-dev": {
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.9.1",
+        "haydenpierce/class-finder": "^0.4.1",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^8.0"
