阿里云直传

--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,11 @@ OSS_SECRET_KEY=
 OSS_ENDPOINT=
 OSS_BUCKET=
 OSS_IS_CNAME=false
+
+# 阿里云oss(直传)
+ALIYUN_OSS_ACCESS_KEY=
+ALIYUN_OSS_ACCESS_SECRET=
+ALIYUN_OSS_ROLE_ARN=
+ALIYUN_OSS_REGION_ID=
+ALIYUN_OSS_REGION=
+ALIYUN_OSS_BUCKET=
