--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "alibabacloud/sdk": "^1.8",
         "fideloper/proxy": "^4.0",
         "iidestiny/laravel-filesystem-oss": "^2.0",
         "laravel/framework": "^6.2",
